# expert_advice

./: .gitignore  README.md  pyproject.toml
docs/: spec.md
docs/tasks/: task-001.md  task-002.md  task-003.md  task-004.md  task-005.md  task-006.md  task-007.md  task-008.md  task-009.md  task-010.md  task-011.md  task-012.md
scripts/: generate_readme_figures.py
src/: __main__.py  report.py  run_experiment.py
src/data/: __init__.py  load_uci.py  preprocess.py  split.py
src/ensemble/: hedge.py  loss.py  meta_eta.py  scaling.py
src/experts/: base.py  factory.py  moving_avg.py  naive.py  regression.py  seasonal_profile.py  smoothing.py
tests/: test_e2e.py  test_experts.py  test_hedge.py  test_preprocess.py  test_report.py
